Fixed math bug and utf8 bug on chrome.

--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Md Editor</title>
     <style>
         html * {
@@ -27,6 +30,10 @@
         textarea {
             font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
         }
+        
+        math {
+            display: block;
+        }
 
         #content {
             width: 100%;
@@ -37,15 +44,15 @@
 
         #editor_text {
             width: 100%;
-            height: 90vh;
+            height: 88vh;
         }
 
         #preview {
             margin-left: 15px;
-            height: 90vh;
+            height: 88vh;
             overflow: scroll;
         }
-        
+
         #title {
             font-size: 2em;
             font-weight: bold;
@@ -139,7 +146,12 @@
             font-size: 14px;
             line-height: 1.3;
         }
+
+        .MathJax_Preview {
+            display: contents;
+        }
     </style>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script type="text/javascript" src="{{&site_url}}/drawdown.js"></script>
     <script type="text/javascript" id="MathJax-script" async src="{{&site_url}}/math_jax.js" onload="setup();"></script>
 </head>
@@ -164,12 +176,12 @@
 
     MathJax = {
         tex: {
-            inlineMath: [['$', '$'], ['\\(', '\\)']]
+            inlineMath: [['$', '$'], ['\\(', '\\)']],
         },
         svg: {
             fontCache: 'global'
         },
-        startup: { typeset: false }
+        startup: { typeset: true },
     };
 
     function recompile() {
@@ -184,9 +196,10 @@
             // starting from the declaration of the table of contents
             console.log("Detected inhaltsverzeichnis");
         }
-        
+
         // basic readme update
         let out_div = document.getElementById("preview");
+        let prev_scroll = out_div.scrollTop;
         out_div.innerHTML = '';
         out_div.innerHTML = markdown(t, MathJax.getMetricsFor(out_div));
 
@@ -194,6 +207,7 @@
         MathJax.texReset();
         document.querySelectorAll('math').forEach((m) => {
             let c = m.innerHTML.trim().replaceAll("&amp;", "&");
+            console.log(c);
             m.innerHTML = '';
             let options = MathJax.getMetricsFor(m);
             options.display = false;
@@ -202,6 +216,7 @@
         });
         MathJax.startup.document.clear();
         MathJax.startup.document.updateDocument();
+        out_div.scroll(0, prev_scroll);
     }
 
     async function save() {
