--- a/templates/overview.html
+++ b/templates/overview.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="{{user_specific_css}}">
     <style>
