--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
     <title>Md Editor</title>
     <style>
         html * {
@@ -29,6 +29,7 @@
 
         textarea {
             font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+            resize: horizontal;
         }
         
         math {
@@ -39,7 +40,7 @@
             width: 100%;
             height: 100%;
             display: grid;
-            grid-template-columns: 1fr 50%;
+            grid-template-columns: auto auto;
         }
 
         #editor_text {
@@ -95,6 +96,10 @@
             background: rgba(211, 218, 234, 0.25);
         }
 
+        img {
+            width: 80%;
+        }
+
         pre>code {
             display: block;
             padding: 0.5em 4em;
@@ -115,10 +120,6 @@
 
         th {
             border-bottom: 1px solid #aaa;
-        }
-
-        img {
-            max-width: 96px;
         }
 
         .plain,
@@ -182,6 +183,9 @@
             fontCache: 'global'
         },
         startup: { typeset: true },
+        options: {
+            enableMenu: false,
+        }
     };
 
     function recompile() {
@@ -207,7 +211,6 @@
         MathJax.texReset();
         document.querySelectorAll('math').forEach((m) => {
             let c = m.innerHTML.trim().replaceAll("&amp;", "&");
-            console.log(c);
             m.innerHTML = '';
             let options = MathJax.getMetricsFor(m);
             options.display = false;
