--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -10,7 +10,7 @@
     <style>
         html * {
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 1.5rem;
+            font-size: min(2vw, .5cm);
         }
 
         body {
@@ -60,15 +60,15 @@
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 250%
         }
 
         h2 {
-            font-size: 2rem;
+            font-size: 200%;
         }
 
         h3 {
-            font-size: 1.7rem;
+            font-size: 150%;
         }
 
         hr {
