--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -231,6 +231,14 @@
         res = await res.json();
         console.log(res);
     }
+    
+    var saved_md_data = document.getElementById("editor_text").value;
+    window.setInterval(() => {
+        if (saved_md_data != document.getElementById("editor_text").value) {
+            save();
+            saved_md_data = document.getElementById("editor_text").value;
+        }
+    }, 5000);
 
     function setup() {
         recompile();
