--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -4,7 +4,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tbl Editor</title>
     <style>
         html * {
@@ -14,6 +13,8 @@
 
         body {
             width: auto;
+            margin: 0px 4px 0px 4px;
+            height: 100vh;
         }
 
         a {
@@ -162,69 +163,86 @@
             display: grid;
             grid-template-columns: auto auto;
             grid-template-rows: auto auto;
-            height: calc(100vh - 400px);
-            width: calc(100vw - 30px);
+            overflow:scroll;
         }
 
         #select_end {
             vertical-align: middle;
         }
+
+        #flex_container {
+            display: flex;
+            flex-flow: column;
+            height: 100%
+        }
+
+        #flex_container #header {
+            flex: 0 1 auto;
+        }
+
+        #flex_container #table_container {
+            flex: 1 1 auto;
+        }
     </style>
 </head>
 
 <body>
-    <div id="editor_header">
-        <p style="font-size:200%; text-align:center">{{file_name}}</p>
-        <div id="tool_bar" class="tool_bar">
-            <button id="save" class="tool_item" onclick="save();">&#128190;</button>
-            <div class="tool_bar_separator"></div>
-            <div id="font_size" class="tool_item">
-                <a onclick="font_delta(1);">+</a>
-                <input id="font_size_input" value="8" onchange="font_size_changed()" />
-                <a onclick="font_delta(-1);">-</a>
+    <div id="flex_container">
+        <div id="header">
+            <div id="editor_header">
+                <p style="font-size:200%; text-align:center">{{file_name}}</p>
+                <div id="tool_bar" class="tool_bar">
+                    <button id="save" class="tool_item" onclick="save();">&#128190;</button>
+                    <div class="tool_bar_separator"></div>
+                    <div id="font_size" class="tool_item">
+                        <a onclick="font_delta(1);">+</a>
+                        <input id="font_size_input" value="8" onchange="font_size_changed()" />
+                        <a onclick="font_delta(-1);">-</a>
+                    </div>
+                    <div class="tool_bar_separator"></div>
+                    <div class="tool_item">
+                        <button onclick="toggle_font_bold();"><b>B</b></button>
+                    </div>
+                    <div class="tool_item">
+                        <button onclick="toggle_font_italic();"><i>I</i></button>
+                    </div>
+                    <div class="tool_item">
+                        <button onclick="toggle_font_del();"><del>D</del></button>
+                    </div>
+                    <div class="tool_bar_separator"></div>
+                    <input id="text_color_picker" type="color" class="tool_item"
+                        onchange="change_color('color', this)">A</input>
+                    <input id="background_color_picker" type="color" class="tool_item"
+                        onchange="change_color('background-color', this)" value="#ffffff">&#129699;</input>
+                    <div class="tool_bar_separator"></div>
+                    <button id="align_left" onclick="align('left');" class="flip">&#8694;</button>
+                    <button id="align_center" onclick="align('center');">&#9776;</button>
+                    <button id="align_right" onclick="align('end');">&#8694;</button>
+                    <div class="tool_bar_separator"></div>
+                    <button id="add_new_row_below" onclick="" class="tool_item">&#9088;</button>
+                    <div class="tool_bar_separator"></div>
+                    <button id="add_ballot_box" onclick="add_ballot_box();">&#9745;</button>
+                    <div class="tool_bar_separator"></div>
+                    <button id="fit_col_to_text_width" onclick="fit_col_to_text_width();">Textbreite</button>
+                </div>
             </div>
-            <div class="tool_bar_separator"></div>
-            <div class="tool_item">
-                <button onclick="toggle_font_bold();"><b>B</b></button>
+
+            <div id="input_bar" class="input_bar">
+                <input id="cell_selection" class="tool_item" type="dropdown" value="A1" onchange="update_selected();" />
+                <button id="select_end" onclick="next_end=true;">&#9974;</button>
+                <div class="tool_item">f(x) = </div>
+                <input id="tool_item_content" class="tool_item" type="text" onchange="update_text(this)" />
+                <button id="insert_cells_toggle" onclick="toggle_insert_cells();">&#9633;</button>
             </div>
-            <div class="tool_item">
-                <button onclick="toggle_font_italic();"><i>I</i></button>
-            </div>
-            <div class="tool_item">
-                <button onclick="toggle_font_del();"><del>D</del></button>
-            </div>
-            <div class="tool_bar_separator"></div>
-            <input id="text_color_picker" type="color" class="tool_item"
-                onchange="change_color('color', this)">A</input>
-            <input id="background_color_picker" type="color" class="tool_item"
-                onchange="change_color('background-color', this)" value="#ffffff">&#129699;</input>
-            <div class="tool_bar_separator"></div>
-            <button id="align_left" onclick="align('left');" class="flip">&#8694;</button>
-            <button id="align_center" onclick="align('center');">&#9776;</button>
-            <button id="align_right" onclick="align('end');">&#8694;</button>
-            <div class="tool_bar_separator"></div>
-            <button id="add_new_row_below" onclick="" class="tool_item">&#9088;</button>
-            <div class="tool_bar_separator"></div>
-            <button id="add_ballot_box" onclick="add_ballot_box();">&#9745;</button>
-            <div class="tool_bar_separator"></div>
-            <button id="fit_col_to_text_width" onclick="fit_col_to_text_width();">Textbreite</button>
         </div>
-    </div>
 
-    <div id="input_bar" class="input_bar">
-        <input id="cell_selection" class="tool_item" type="dropdown" value="A1" onchange="update_selected();" />
-        <button id="select_end" onclick="next_end=true;">&#9974;</button>
-        <div class="tool_item">f(x) = </div>
-        <input id="tool_item_content" class="tool_item" type="text" onchange="update_text(this)" />
-        <button id="insert_cells_toggle" onclick="toggle_insert_cells();">&#9633;</button>
-    </div>
-
-    <div id="table_container">
-        <div id="empty_cell"></div>
-        <div id="column_labels" onscroll="sync_scroll(this)"></div>
-        <div id="row_labels" onscroll="sync_scroll(this)"></div>
-        <div id="table" onscroll="sync_scroll(this)"></div>
-        <!--The table is created programmatically, see init_table()-->
+        <div id="table_container">
+            <div id="empty_cell"></div>
+            <div id="column_labels" onscroll="sync_scroll(this)"></div>
+            <div id="row_labels" onscroll="sync_scroll(this)"></div>
+            <div id="table" onscroll="sync_scroll(this)"></div>
+            <!--The table is created programmatically, see init_table()-->
+        </div>
     </div>
 </body>
 <script>
@@ -656,7 +674,7 @@
     const grad_zu_rad = (g) => { return g * PI / 180; }
     const rad_zu_grad = (r) => { return r * 180 / PI; }
     const runden = (n, s = 0) => { return +((+n).toFixed(s)); }
-    const zahl = (a) => {return +(a.replace(',', '.').replace(/[^(\d|\.)].*/, '')); }
+    const zahl = (a) => { return +(a.replace(',', '.').replace(/[^(\d|\.)].*/, '')); }
     const hintergrundfarbe = (farbe) => { change_color("background-color", farbe in color_map ? { value: color_map[farbe] } : { value: farbe }); return null; }
     const hf = hintergrundfarbe;
     const PI = Math.PI
@@ -731,7 +749,7 @@
                 continue;
             if (table_data[key].content.charAt(0) == "=")
                 try { executor.call({}, table_data, key, finished_fields, unfinished_fields); }
-                catch (e) {}
+                catch (e) { }
         }
     }
 
