Added enum inflection, not yet beautified.

--- a/templates/editors/md.html
+++ b/templates/editors/md.html
@@ -99,7 +99,8 @@
         }
 
         code {
-            background: rgba(211, 218, 234, 0.25);
+            background: rgba(186, 193, 208, 0.729);
+            font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
         }
 
         img {
