Started to add gpx editor

--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -753,6 +753,7 @@
                 finished_fields[field] = result;
             }
             document.getElementById("cell_selection").value = prev_selection;
+            return result;
         }
 
         "use strict";
